name: ProjectEuler
version: 0.0.1.0
cabal-version: >=1.6
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) James Ralston
maintainer: James Ralston <jpralston1@gmail.com>
stability: stable
homepage: https://github.com/jpralston/ProjectEuler
bug-reports: mailto:jpralston@gmail.com
synopsis: haskell implementation of Project Euler solutions
description: yo
category: Console, Text
author: James Ralston
data-dir: ""
 
flag threaded
    Default: False
 
executable ProjectEuler
    build-depends: base >=4.2 && <5
     
    if flag(threaded)
        buildable: True
        ghc-options: -threaded
    main-is: ProjectEuler.hs
    buildable: True
    hs-source-dirs: src
 
 